--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "html-loader": "^1.0.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "~4.14",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
@@ -36,14 +36,14 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "elliptic": "^6.5.4",
+    "hosted-git-info": "^2.8.9",
+    "is-svg": "^4.2.2",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.21",
     "popper.js": "^1.16.1",
     "tilt.js": "^1.2.1",
-    "elliptic": "^6.5.4",
-    "is-svg": "^4.2.2",
-    "y18n": "^4.0.1",
-    "url-parse": "^1.5.0",
-    "lodash": "^4.17.21",
-    "hosted-git-info": "^2.8.9"
+    "url-parse": "^1.5.10",
+    "y18n": "^4.0.1"
   }
 }
